[gd_scene load_steps=23 format=3 uid="uid://bk2425mpsguxh"]

[ext_resource type="Script" path="res://scripts/food_spawner.gd" id="1_kqmrp"]
[ext_resource type="Script" path="res://scripts/game_over.gd" id="1_n2661"]
[ext_resource type="Texture2D" uid="uid://dtsebympof1ya" path="res://new_background.jpg" id="2_3ii53"]
[ext_resource type="PackedScene" uid="uid://cwueybgvt4eq7" path="res://scenes/food.tscn" id="2_5scjf"]
[ext_resource type="FontFile" uid="uid://b2xb8ywfc7ndp" path="res://assets/MinimalPixelFont.ttf" id="2_wxmm3"]
[ext_resource type="Texture2D" uid="uid://1x435qmdmh3a" path="res://assets/ui/Replay.png" id="3_3f01v"]
[ext_resource type="PackedScene" uid="uid://b7seeawya17l0" path="res://scenes/food2.tscn" id="3_25057"]
[ext_resource type="Texture2D" uid="uid://ctgk1tyxftdu1" path="res://assets/ui/Home.png" id="4_das8q"]
[ext_resource type="PackedScene" uid="uid://cqb7wkq53mug2" path="res://scenes/food3.tscn" id="4_ll0jr"]
[ext_resource type="PackedScene" uid="uid://42mi6d5xp85u" path="res://scenes/bad_food_scene.tscn" id="5_2g7kw"]

[sub_resource type="LabelSettings" id="LabelSettings_2c580"]
font = ExtResource("2_wxmm3")
font_size = 100

[sub_resource type="LabelSettings" id="LabelSettings_oysxk"]
font_size = 30

[sub_resource type="LabelSettings" id="LabelSettings_60ruv"]
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_p7k7i"]
font_size = 15

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j13am"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e5f1h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pdfdj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qydd2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ockb2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fwpbt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aki0k"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x66yy"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n2661")

[node name="NewBackground" type="Sprite2D" parent="."]
position = Vector2(601, 335)
texture = ExtResource("2_3ii53")

[node name="Group" type="Control" parent="."]
z_index = 5
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Group"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -74.0
offset_right = 120.0
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 60

[node name="VBoxContainer" type="VBoxContainer" parent="Group/VBoxContainer"]
layout_mode = 2

[node name="GameOverLabel" type="Label" parent="Group/VBoxContainer/VBoxContainer"]
self_modulate = Color(1, 0, 0, 1)
layout_mode = 2
size_flags_horizontal = 4
text = "GAME OVER!"
label_settings = SubResource("LabelSettings_2c580")

[node name="ScoreLabel" type="Label" parent="Group/VBoxContainer/VBoxContainer"]
self_modulate = Color(0, 1, 0, 1)
layout_mode = 2
size_flags_horizontal = 4
text = "Score: "
label_settings = SubResource("LabelSettings_oysxk")

[node name="BadFoodLabel" type="Label" parent="Group/VBoxContainer/VBoxContainer"]
self_modulate = Color(0, 0, 1, 1)
layout_mode = 2
size_flags_horizontal = 4
text = "Bad Foods destroyed: 0"
label_settings = SubResource("LabelSettings_60ruv")

[node name="GoodFoodLabel" type="Label" parent="Group/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "good foods consumed: 0"
label_settings = SubResource("LabelSettings_p7k7i")

[node name="HBoxContainer" type="HBoxContainer" parent="Group/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 50
alignment = 1

[node name="Retry" type="Button" parent="Group/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_j13am")
theme_override_styles/hover = SubResource("StyleBoxFlat_e5f1h")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pdfdj")
theme_override_styles/normal = SubResource("StyleBoxFlat_qydd2")
icon = ExtResource("3_3f01v")
flat = true

[node name="MainMenu" type="Button" parent="Group/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_ockb2")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_fwpbt")
theme_override_styles/pressed = SubResource("StyleBoxFlat_aki0k")
theme_override_styles/normal = SubResource("StyleBoxFlat_x66yy")
icon = ExtResource("4_das8q")
flat = true

[node name="FoodSpawner" type="Node2D" parent="."]
z_index = -1
z_as_relative = false
script = ExtResource("1_kqmrp")
good_food_scenes = Array[PackedScene]([ExtResource("2_5scjf"), ExtResource("3_25057"), ExtResource("4_ll0jr")])
bad_food_scene = ExtResource("5_2g7kw")
spawn_rate = 1.0

[node name="SpawnTimer" type="Timer" parent="FoodSpawner"]
wait_time = 0.9
autostart = true

[connection signal="pressed" from="Group/VBoxContainer/HBoxContainer/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="Group/VBoxContainer/HBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
